# metrics-discovery

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  EXAMPLE_USAGE.md  GPU_USAGE_README.md  LICENSE.md  Makefile.gpu_usage  README.md  gpu_usage  gpu_usage.c  libmd.pc.in  md_cmake_adapter.cmake
docs/: metric_info_ACM_GT1.tsv  metric_info_ACM_GT2.tsv  metric_info_ACM_GT3.tsv  metric_info_ADLN.tsv  metric_info_ADLS.tsv  metric_info_ARL_GT1.tsv  metric_info_ARL_GT2.tsv  metric_info_BDW.tsv  metric_info_BMG.tsv  metric_info_BXT.tsv  metric_info_CFL_GT2.tsv  metric_info_CFL_GT3.tsv  metric_info_CRI.tsv  metric_info_DG1.tsv  metric_info_EHL.tsv  metric_info_GLK.tsv  metric_info_HSW.tsv  metric_info_ICL.tsv  metric_info_LNL.tsv  metric_info_MTL_GT2.tsv  metric_info_MTL_GT3.tsv  metric_info_NVL.tsv  metric_info_NVLP.tsv  metric_info_PTL.tsv  metric_info_PVC_GT1.tsv  metric_info_PVC_GT2.tsv  metric_info_RKL.tsv  metric_info_SKL_GT2.tsv  metric_info_SKL_GT4.tsv  metric_info_TGL_GT1.tsv  metric_info_TGL_GT2.tsv  metric_info_XEHP_SDV_GT1.tsv  metric_info_XEHP_SDV_GT1_GT2.tsv
examples/: CMakeLists.txt  gpu_trace.cpp
inc/common/instrumentation/api/: instr_gt_driver_ifc.h  metrics_discovery_api.h  metrics_discovery_internal_api.h
instrumentation/: .clang-format
instrumentation/metrics_discovery/codegen/: md_external_events.cpp  md_external_events.h  md_main.cpp  md_main_BDW.cpp  md_main_BXT.cpp  md_main_CFL_GT2.cpp  md_main_CFL_GT3.cpp  md_main_EHL.cpp  md_main_GLK.cpp  md_main_HSW.cpp  md_main_ICL.cpp  md_main_KBL_GT2.cpp  md_main_KBL_GT3.cpp  md_main_SKL_GT2.cpp  md_main_SKL_GT3.cpp  md_main_SKL_GT4.cpp  md_metric_sets_ACM_GT1.h  md_metric_sets_ACM_GT2.h  md_metric_sets_ACM_GT3.h  md_metric_sets_ADLN.cpp  md_metric_sets_ADLN.h  md_metric_sets_ADLP.cpp  md_metric_sets_ADLP.h  md_metric_sets_ADLS.cpp  md_metric_sets_ADLS.h  md_metric_sets_ARL_GT1.cpp  md_metric_sets_ARL_GT1.h  md_metric_sets_ARL_GT2.h  md_metric_sets_BDW.cpp  md_metric_sets_BDW.h  md_metric_sets_BMG.cpp  md_metric_sets_BMG.h  md_metric_sets_BXT.cpp  md_metric_sets_BXT.h  md_metric_sets_CFL_GT2.cpp  md_metric_sets_CFL_GT2.h  md_metric_sets_CFL_GT3.cpp  md_metric_sets_CFL_GT3.h  md_metric_sets_CRI.cpp  md_metric_sets_CRI.h  (+87 more)
instrumentation/metrics_discovery/common/: md_calculation.cpp  md_internal.cpp  md_main.cpp  md_utils.cpp
instrumentation/metrics_discovery/common/inc/: md_calculation.h  md_debug.h  md_driver_ifc.h  md_exports.h  md_internal.h  md_metrics.h  md_metrics_calculator.h  md_per_platform_preamble.h  md_types.h  md_utils.h
instrumentation/metrics_discovery/common/inc/internal/: md_adapter.h  md_adapter_group.h  md_calculation_context.h  md_concurrent_group.h  md_driver_ifc_offline.h  md_equation.h  md_events.h  md_information.h  md_metric.h  md_metric_enumerator.h  md_metric_prototype.h  md_metric_prototype_manager.h  md_metric_set.h  md_metrics_device.h  md_override.h  md_register_manager.h  md_register_set.h  md_symbol_set.h
instrumentation/metrics_discovery/common/inc/internal/concurrent_groups/: md_concurrent_group.h  md_mert_concurrent_group.h  md_oa_concurrent_group.h  md_oam_concurrent_group.h
instrumentation/metrics_discovery/common/internal/: md_adapter.cpp  md_adapter_group.cpp  md_calculation_context.cpp  md_common.cpp  md_concurrent_group.cpp  md_equation.cpp  md_events.cpp  md_information.cpp  md_metric.cpp  md_metric_enumerator.cpp  md_metric_prototype.cpp  md_metric_prototype_manager.cpp  md_metric_set.cpp  md_metrics_device.cpp  md_override.cpp  md_register_manager.cpp  md_register_set.cpp  md_symbol_set.cpp
instrumentation/metrics_discovery/common/internal/concurrent_groups/: md_concurrent_group.cpp  md_mert_concurrent_group.cpp  md_oa_concurrent_group.cpp  md_oam_concurrent_group.cpp
instrumentation/metrics_discovery/linux/: md_driver_ifc_linux_common.cpp  md_driver_ifc_linux_perf.cpp  md_driver_ifc_linux_xe.cpp  md_sub_devices_linux.cpp
instrumentation/metrics_discovery/linux/inc/: gfx_device_info.h  md_driver_ifc_linux_common.h  md_driver_ifc_linux_perf.h  md_driver_ifc_linux_xe.h  md_gfx_device_info.h  md_sub_devices_linux.h
instrumentation/utils/common/: iu_debug.c
instrumentation/utils/common/inc/: iu_debug.h  iu_std.h
instrumentation/utils/linux/: iu_os.cpp  iu_std.cpp  iu_std_linux.cpp
instrumentation/utils/linux/inc/: iu_i915_perf.h  iu_os.h
